--- a/composer.json
+++ b/composer.json
@@ -9,5 +9,13 @@
             "email": "mohan@mohanklein.de"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.0.0",
+        "intervention/image": "^2.4"
+    },
+    "autoload": {
+        "psr-4" : {
+            "SehrGut\\LaravelAttachments" : "src"
+        }
+    }
 }
